# highlight

./: .gitignore  Makefile  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: book.rs  main.rs
src/app/: globals.css  page.jsx
src/app/choise/: choise.jsx
src/app/components/: bookcotent.jsx  bookshelf.jsx  detail.jsx
src/app/home/: page.jsx
src/app/second/: page.jsx
